# mmrotate_playground

./: README.md  pyproject.toml
src/mmrotate_playground/: huge_image_demo.py
