[project]
name = "mmrotate-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wep21", email = "daisuke.nishimatsu1021@gmail.com" }
]
dependencies = [
    "mmrotate==v1.0.0rc1",
    "openmim>=0.3.9",
    "opencv-python-headless>=4.8.1.78",
    "PyQt5>=5.15.10",
    "torch==2.0.0",
    "mmengine>=0.9.1",
    "mmcv==2.0.1",
    "mmdet<3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "mmcv"
url = "https://download.openmmlab.com/mmcv/dist/cu117/torch2.0/index.html"
type = "find-links"
